--- a/javascript.html
+++ b/javascript.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="work.js"></script>
+    <title>simple calculation</title>
+</head>
 
 <body>
-    <p>simple javascript </P>
-    <script language="javascript" type="text/javascript">
-        var a, b, c, add, sub, mul, div;
-        a = parseInt(prompt("Enter first number"));
-        b = parseInt(prompt("Enter second number"));
-        c = parseInt(prompt("Enter third number"));
-        add = a + b + c;
-        sub = a - b - c;
-        mul = a * b * c;
-        div = a / b / c;
-        document.write("add is" + add + "<br>" + "sub is" + sub + "<br>" + "mul is" + mul + "<br>" + "div is" + div);
-        console.log(document.write)
-    </script>
+
 </body>
 
 </html>
